# BugBoard26_INGSW

./: CMakeLists.txt
Documentazione/Primo homework/: ui.drawio
Documentazione/Primo homework/mock-up/: ui.drawio
Documentazione/Primo homework/ucd/: ucd.drawio
src/: main.cpp
src/Widgets/: Login.cpp  Login.h  Register.cpp  Register.h
tests/: test_main.cpp
